- fix where you could accidentally delete on touch non-visible trash button for mobile - more css cleaning

--- a/HTML/css/main.css
+++ b/HTML/css/main.css
@@ -1,162 +1,241 @@
-html {
-  height: 100%;
+html
+{
+	height: 100%;
 }
-body {
+
+body
+{
+	font: 18px Arial, 'Helvetica Neue', Helvetica, sans-serif;
+
 	margin: 0;
-	background-color: #002650;
 
+	color: #fff;
 	background: #002650;
-	background: -moz-linear-gradient(top, #002650 0%, #3b57a7 100%);
-	background: -webkit-linear-gradient(top, #002650 0%,#3b57a7 100%);
-	background: linear-gradient(to bottom, #002650 0%,#3b57a7 100%);
-
-	color: #fff;
-	font:  18px Arial, "Helvetica Neue", Helvetica, sans-serif;
+	background:    -moz-linear-gradient(top, #002650 0%, #3b57a7 100%);
+	background: -webkit-linear-gradient(top, #002650 0%, #3b57a7 100%);
+	background:         linear-gradient(to bottom, #002650 0%, #3b57a7 100%);
+	background-color: #002650;
 }
 
 
-.logo {
+.logo
+{
+	position: relative;
+
 	display: block;
-	position:  relative;
-	margin: 64px auto;
+
 	width: 134px;
- }
-
-
-#history {
-    /* border: 1px solid; */
-    width: 100%;
-    margin-top: 30px;
-    padding: 20px 0;
-	background-color: rgba(255, 255, 255, 0.1);
-	display:  none;
+	margin: 64px auto;
 }
 
-#history > div { position: relative; }	 
-#history a:first-child{
-	padding: 17px 60px;
+
+#history
+{
+	display: none;
+
+	width: 100%;
+	margin-top: 30px;
+	padding: 20px 0;
+
+	background-color: rgba(255, 255, 255, .1);
+}
+
+#history > div
+{
+	position: relative;
+}
+
+#history a:first-child
+{
 	display: block;
-	color: #fff;
+
+	padding: 17px 60px;
+
 	text-decoration: none;
-	/* background-color: rgba(255, 255, 255, 0.2); */
+
+	color: #fff;
 }
 
-@media (hover:hover){
-	#history a:first-child:hover  { background-color: rgba(255, 255, 255, 0.1); }
-	#history a:first-child:hover + .del-history, .del-history:hover { opacity:1; background: #793d55;  }
-	.del-history:hover  { opacity:1 ; background: #790030; cursor:pointer; }	
+@media (hover:hover)
+{
+	#history a:first-child:hover
+	{
+		background-color: rgba(255, 255, 255, .1);
+	}
+	#history a:first-child:hover + .del-history, .del-history:hover
+	{
+		display: block;
+		background: #793d55;
+	}
+	.del-history:hover
+	{
+		cursor: pointer;
+
+		display: block;
+		background: #790030;
+	}
 }
 
-@media (hover:none), (hover:on-demand){
-	.del-history  { opacity:1 ; background: #793d55;  }
+@media (hover:none),(hover:on-demand)
+{
+	.del-history
+	{
+		display: block;
+		background: #793d55;
+	}
 }
 
-#history  a > span:first-child  {
+#history a > span:first-child
+{
+	display: inline-block;
+
 	width: calc(100% - 115px);
 	min-width: 180px;
-	display: inline-block;
 }
 
-#history  a > span+span { font-size: 12px; margin-left: 15px;  } 
+#history a > span + span
+{
+	font-size: 12px;
 
+	margin-left: 15px;
+}
 
 .del-history
-{ 
-	top: 0; right: 0;
+{
+	position: absolute;
+	top: 0;
+	right: 0;
+
+	width: 50px;
 	height: 100%;
-    width: 50px;
-    position: absolute;
-    opacity: 0;
+
+	display: none;
+	/* opacity: 0; */
 }
 
 .del-history img
-{ 
-    position: absolute;
-    width: 20px;
-    margin-top: -10px;
-    margin-left: -10px;    
-    left: 50%;
-    top: 50%;
+{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+
+	width: 20px;
+	margin-top: -10px;
+	margin-left: -10px;
 }
 
-#search-zone {
+#search-zone
+{
 	padding: 0 40px;
+
 	opacity: 0;
 }
 
-#searchform > div  {
-  position: relative;
-  max-width: 500px;
-  margin: 0 auto;
-}
-#searchform >div > img {
-  position: absolute;
-  top: 18px;
-  bottom: 0;
-  left: 19px;
-  width: 15px;
+#searchform > div
+{
+	position: relative;
+
+	max-width: 500px;
+	margin: 0 auto;
 }
 
-#searchform input {
-	background-color: rgba(255, 255, 255, 0.5);
-	outline: none; 
-	font:  inherit;
-	border:  0px;
-	height: 24px;
-	padding: 15px 0px;
-	/* padding-left: 40px; */
+#searchform > div > img
+{
+	position: absolute;
+	top: 18px;
+	bottom: 0;
+	left: 19px;
+
+	width: 15px;
+}
+
+#searchform input
+{
+	font: inherit;
+
 	width: 100%;
-	border-radius: 4px;
-}
-
-::-webkit-input-placeholder {
-   color: rgba(255, 255, 255, 0.4);
-   letter-spacing: 0.5px;
-}
-
-::-ms-input-placeholder { 
-   color: rgba(255, 255, 255, 0.4);
-   letter-spacing: 0.5px;
-}
-
-::-moz-placeholder {
-	color: rgba(255, 255, 255, 0.4);
-	letter-spacing: 0.5px;
-	opacity: 1;
-}
-
-.twitter-typeahead{
-     width: 100%;
-}
-
-.tt-hint {
-  color: rgba(255, 255, 255, 0.4);
-  opacity: 0.4;
-  width:  calc(100% - 48px) !important;
-  padding-left: 48px !important;
-}
-
-input#searchbox.tt-input  {
-	color: #fff;
 	height: 24px;
-	padding-left: 48px;
-	width:  calc(100% - 48px);
+	padding: 15px 0;
+
+	border: 0;
+	border-radius: 4px;
+	outline: none;
+	background-color: rgba(255, 255, 255, .5);
 }
 
-.tt-input:focus { background-color: rgba(255, 255, 255, 0.55) !important; }
-.tt-menu {
-	width:  100%;
+::-webkit-input-placeholder
+{
+	letter-spacing: .5px;
+
+	color: rgba(255, 255, 255, .4);
+}
+
+::-ms-input-placeholder
+{
+	letter-spacing: .5px;
+
+	color: rgba(255, 255, 255, .4);
+}
+
+::-moz-placeholder
+{
+	letter-spacing: .5px;
+
+	opacity: 1;
+	color: rgba(255, 255, 255, .4);
+}
+
+.twitter-typeahead
+{
+	width: 100%;
+}
+
+.tt-menu
+{
+	width: 100%;
+
+	color: black;
 	border: 0;
 	border-top: 0;
 	background: white;
-	color: black;
-	
 }
 
-.tt-suggestion {
-	margin:  0px;
-	cursor: pointer;
+.tt-suggestion
+{
+	margin: 0;
 	padding: 0 10px;
+
+	cursor: pointer;
 }
 
-.tt-suggestion.tt-cursor { background-color: #ccc; padding: 0 10px;}
+.tt-suggestion.tt-cursor
+{
+	padding: 0 10px;
+
+	background-color: #ccc;
+}
+
+input.tt-hint
+{
+	width: calc(100% - 48px) !important;
+	padding-left: 48px !important;
+
+	opacity: .4;
+	color: rgba(255, 255, 255, .4);
+}
+
+input#searchbox.tt-input
+{
+	width: calc(100% - 48px);
+	height: 24px;
+	padding-left: 48px;
+
+	color: #fff;
+}
+
+input#searchbox.tt-input:focus
+{
+	background-color: rgba(255, 255, 255, .55) !important;
+}
+
+
